--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-
 <h1>Projeto teste</h1>
 <menu-component></menu-component>
-<my-button></my-button>
-<my-button></my-button>
+<my-button [label]="buttonLabel"></my-button>
+<my-button [label]="buttonSecond"></my-button>
