--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>Projeto teste</h1>
-<menu-component></menu-component>
-<my-button [label]="buttonLabel"></my-button>
-<my-button [label]="buttonSecond"></my-button>
+<h1>{{ title }}</h1>
+<app-heroes></app-heroes>
+
